# Pira

./: .gitignore  Cargo.toml  README.md  Readme.md  build-wasm.py  build_gl.rs  imgui.ini
examples/3d_camera/: main.rs
examples/egui/: main.rs
examples/fbo/: main.rs
examples/imgui/: Cargo.toml  imgui.ini  main.rs
examples/imgui/src/: main.rs
examples/indexed/: Cargo.toml  main.rs
examples/indexed/src/: main.rs
examples/instances/: Cargo.toml  imgui.ini  main.rs
examples/instances/src/: main.rs
examples/particles/: Cargo.toml  main.rs
examples/particles/src/: main.rs
examples/scene_graph/: main.rs  node_tree.rs
examples/simple_app/: main.rs
examples/textured/: main.rs
examples/textured_quad/: Cargo.toml
examples/textured_quad/src/: main.rs
examples/wasm-app/: main.rs
lib/gl/: Cargo.toml
lib/gl/src/: gl_bindings.rs  lib.rs
lib/gl_helper/: Cargo.toml
lib/gl_helper/src/: glsl_prog.rs  lib.rs  stock_shader.rs  texture.rs  vao.rs  vbo.rs
lib/piralib/: Cargo.toml
lib/piralib/src/: app.rs  lib.rs
src/: app.rs  lib.rs  main.rs
src/gl_helper/: fbo.rs  geo.rs  glsl_prog.rs  mod.rs  stock_shader.rs  texture.rs  vao.rs  vao_sliced.rs  vbo.rs
src/utils/: TransformSystem.rs  _geo.rs  camera.rs  mod.rs  transform_system.rs
src/utils/geo/: axis.rs  circle.rs  cuboid.rs  mod.rs  rect.rs  sphere.rs
web/: index.html  instances.d  instances.d.ts  instances.js  instances_bg.wasm  instances_bg.wasm.d.ts  scene_graph.d.ts  scene_graph.js  scene_graph_bg.wasm  scene_graph_bg.wasm.d.ts  wasm-app.d.ts  wasm-app.js  wasm-app_bg.wasm  wasm-app_bg.wasm.d.ts
