[package]
name = "piralib"
version = "0.1.0"
authors = ["hperigo <hperigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "*"
nalgebra-glm = "*"
image = "*"
egui = {version = "0.16.0" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "*", optional = false }
egui_glow = {version = "*", features=["epi"]}
epi = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = {version = "*", features = ["web-sys"]}
wasm-bindgen = { version = "0.2.78" }
wasm-bindgen-futures = { version = "*" }
js-sys = "*"
console_error_panic_hook = "*"
egui_web = { version = "*", default-features=false, features=["glow"]}
egui_glow = { version = "*", default-features=false }


[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "*"
features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]

[dev-dependencies]
getrandom = { version = "*", features=["js"]}
rand = { version = "*"}
indextree = "*"
