[package]
name = "piralib"
version = "0.1.0"
authors = ["hperigo <hperigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "*"
glam = "*"
image = "*"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.28.0", optional = false }
egui = {version = "0.18.1", features=["default_fonts"]}
egui_glow = {version = "0.18.1", features=["winit", "default"] }

[dev-dependencies]
getrandom = { version = "*", features=["js"]}
rand = { version = "*"}
indextree = "*"
